# 3_year_kursach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
app/: celery_app.py  config.py  db.py  main.py  seed.py
app/core/: deps.py  errors.py  security.py
app/models/: __init__.py  asset.py  fundamentals.py  portfolio.py  position.py  price.py  snapshot.py  transaction.py  user.py
app/providers/: __init__.py  base.py  coingecko.py  custom.py  fx.py  manual.py  moex.py  registry.py  yahoo.py
app/routers/: __init__.py  analytics.py  assets.py  auth.py  portfolios.py  positions.py  reports.py  transactions.py
app/schemas/: __init__.py  analytics.py  asset.py  auth.py  common.py  portfolio.py  position.py  report.py  transaction.py
app/scripts/: repair_assets.py
app/services/: __init__.py  analytics_service.py  asset_service.py  auth_service.py  market_data.py  portfolio_service.py  position_service.py  pricing_service.py  report_service.py  transaction_service.py
app/services/analytics/: __init__.py  compare.py  core.py  (+7 more)
app/tasks/: __init__.py  _runtime.py  prices.py  snapshots.py
docker/: entrypoint.sh
frontend/: .thumbnail  CURS Portfolio Tracker (standalone).html  CURS Portfolio Tracker.html  analytics.jsx  app.jsx  charts.jsx  dashboard.jsx  data.js  portfolio.jsx  reports.jsx  screens.jsx  styles.css  ui.jsx
migrations/models/: 0_20260518185706_init.py  1_20260523143145_add_pricing_analytics.py
tests/: conftest.py  test_analytics_math.py  test_api.py
