[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Self-hosted investment portfolio management backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "tortoise-orm>=0.21",
    "asyncpg>=0.29",
    "aerich>=0.7.2",
    "tomlkit>=0.12",
    "celery>=5.4",
    "redis>=5.0",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "pyjwt>=2.9",
    "argon2-cffi>=23.1",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "asgi-lifespan>=2.1",
]

[tool.uv]
# This is a deployable application, not a library — don't try to build/install
# the project itself, only resolve and install its dependencies.
package = false

[tool.aerich]
# Single source of DB config (SPEC §5) — points at app.db.TORTOISE_ORM.
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
